--- a/.github/workflows/PowerPlatformDemoActions.yml
+++ b/.github/workflows/PowerPlatformDemoActions.yml
@@ -1,1 +1,40 @@
-jobs
+jobs:
+  build:
+
+    runs-on: windows-latest   # alternate runner OS is: ubuntu-latest
+
+    steps:
+    - name: Install Power Platform Tools
+      uses: microsoft/powerplatform-actions/actions-install@v1
+
+    - name: Export Solution
+      uses: microsoft/powerplatform-actions/export-solution@v1
+      with:
+        environment-url: 'https://hmd365practice.crm8.dynamics.com'
+        user-name: 'aniket.malvankar@happiestminds.com'
+        password-secret: ${{ secrets.MYPASSWORD }}
+        solution-name: ${{secrets.SOLUTIONNAME}}
+        solution-output-file: '${{secrets.SOLUTIONNAME}}.zip'
+        working-directory: 'out'
+
+    - name: Unpack Solution
+      uses: microsoft/powerplatform-actions/unpack-solution@v1
+      with:
+        solution-file: 'out/${{secrets.SOLUTIONNAME}}.zip'
+        solution-folder: 'out/solutions/solution one'
+        solution-type: 'Unmanaged'
+        overwrite-files: true
+
+    - name: Publish Solution
+      uses: microsoft/powerplatform-actions/publish-solution@v1
+      with:
+        environment-url: 'https://hmd365practice.crm8.dynamics.com'
+        user-name: 'aniket.malvankar@happiestminds.com'
+        password-secret: ${{ secrets.MYPASSWORD }}
+
+    - name: Prepare solution changes for check-in into source control
+      uses: microsoft/powerplatform-actions/branch-solution@v1
+      with:
+        solution-folder: 'out/solutions/solution one'
+        solution-target-folder: 'src/solutions/${{secrets.SOLUTIONNAME}}'
+        token: ${{ secrets.GITHUB_TOKEN }}
